force-app/main/default/objects/Program__c/fields/External_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Program_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Program ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>