force-app/main/default/objects/Program__c/fields/LMS_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>LMS_Team_Code__c</fullName>
    <label>LMS Team Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>