force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Program_ID__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>