force-app/main/default/objects/Program__c/listViews/FBA_Programs.listView-meta.xml
<ListView>
    <fullName>FBA_Programs</fullName>
    <columns>NAME</columns>
    <columns>External_Program_ID__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Future Builders of America</value>
    </filters>
    <label>FBA Programs</label>
</ListView>