force-app/main/default/objects/Program__c/listViews/HBI_Academies.listView-meta.xml
<ListView>
    <fullName>HBI_Academies</fullName>
    <columns>NAME</columns>
    <columns>External_Program_ID__c</columns>
    <columns>LMS_Team_Code__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Academies</value>
    </filters>
    <label>HBI Academies</label>
</ListView>