force-app/main/default/objects/Program__c/listViews/Programs_James.listView-meta.xml
<ListView>
    <fullName>Programs_James</fullName>
    <columns>NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Site__c</columns>
    <filterScope>Mine</filterScope>
    <label>Programs - James</label>
</ListView>